--- a/dom/one.html
+++ b/dom/one.html
@@ -7,7 +7,7 @@
     <title>Dom learning</title>
 </head>
 <style>
-    .bg-black{
+    .bg-black {
         background-color: black;
         color: white;
     }
@@ -17,6 +17,12 @@
     <div>
         <h1 id="title" class="heading">dom learning on youtube</h1>
         <p>lorem ipsum dolor sit amet.</p>
+        <ul>
+            <li class="list-item">this</li>
+            <li class="list-item">this0</li>
+            <li class="list-item">this2</li>
+            <li class="list-item">this3</li>
+        </ul>
     </div>
 </body>
 
