--- a/dom/four.html
+++ b/dom/four.html
@@ -22,6 +22,22 @@
         li.appendChild(document.createTextNode(longname));
         document.querySelector('.list').appendChild(li);
     }
-    addOptilanguage( )
+    addOptilanguage('java');
+
+    //Edit
+const secondLong = document.querySelector('li:nth-child(2)');
+console.log(secondLong);
+secondLong.innerHTML = "javascript";
+const newLi = document.createElement('li');
+newLi.textContent = "javascript";
+
+//Edit
+const firstLong = document.querySelector('li:first-child');
+firstLong.outerHTML = "<li>Taypescript </li>";
+
+//remove
+const lastLong = document.querySelector('li:last-child');
+lastLong.remove();
+
 </script>
 </html>
